<resources>
    <string name="app_name">AquaApp</string>
    <string name="name">User name</string>
    <string name="email">Email</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="signout">Sign out</string>
    <string name="company_summary">Company summary</string>
    <string name="banner">banner</string>
    <string name="signup">Sign up</string>
    <string name="submit">Submit</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="processing">Processing..</string>

    <string name="sign_in_logo">Sign In Logo</string>
    <string name="sign_in">Sign In</string>

    <string name="country_name">Country name</string>
    <string name="country_code_format">+%s</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="pin">PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="confirm_pin">Confirm Pin</string>
</resources>
